# wyyyy_C

./: .gitignore  .metadata  AGENTS.md  README.md  index.html  package-lock.json  package.json  pubspec.yaml  rust-toolchain.toml
.github/workflows/: android-release.yml
android/app/: build.gradle.kts
docs/: signing.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cover_scrubber.dart  main.dart  player.dart  player_page.dart  rust_player_repository.dart  settings_page.dart
lib/services/: audio_handler.dart  cover_feedback.dart  media_cache.dart
lib/widgets/: glass_player.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: api.rs  cache.rs  crypto.rs  frb_generated.rs  legacy_tests.rs  lib.rs  models.rs  netease.rs  store.rs  tests.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: wyyyy_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: wyyyy_core.podspec
src/: main.ts  state.test.ts  state.ts  styles.css  view.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  netease.rs  store.rs  tests.rs
test/: audio_handler_test.dart  cover_feedback_test.dart  cover_scrubber_test.dart  media_cache_test.dart  player_app_test.dart  player_controller_test.dart  rust_player_repository_test.dart  settings_auth_test.dart
windows/: CMakeLists.txt
(+36 files in other folders)
