[package]
name = "wyyyy"
version = "0.1.0"
description = "Minimal NetEase Cloud Music player"
authors = ["R19988088"]
edition = "2021"

[lib]
name = "wyyyy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
ecb = "0.1"
hex = "0.4"
md-5 = "0.10"
num-bigint = "0.4"
rand = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tokio = { version = "1", features = ["sync"] }
tempfile = "3"
